--- a/app/views/store-instance-packing.html
+++ b/app/views/store-instance-packing.html
@@ -177,9 +177,10 @@
         </tr>
 
         <!-- New Pick List Items-->
-        <tr ng-repeat="item in newPickListItems | filter:{itemDescription: itemFilterText} | orderBy:itemSortOrder" ng-class="showVarianceWarningClass(item)" class="item-{{item.itemMasterId}}" ng-hide="readOnly">
+        <tr ng-repeat="item in newPickListItems | filter:{itemDescription: itemFilterText} | orderBy:itemSortOrder" ng-hide="readOnly">
           <td>
-            <ui-select required="required" ng-model="item.masterItem" theme="bootstrap" on-select="filterPickListItems()" name="newPickListItem{{ $index }}">
+            <input type="text" ng-model="item.itemDescription" disabled ng-hide="true"/>
+            <ui-select required="required" ng-model="item.masterItem" theme="bootstrap" on-select="filterPickListItems()" name="newPickListItem{{ $index }}" ng-change="setItemDescription(item)">
               <ui-select-match placeholder="Select item from list">{{$select.selected.itemCode }} - {{
                 $select.selected.itemName }}
               </ui-select-match>
@@ -322,9 +323,10 @@
         </tr>
 
         <!-- New Offload List Items-->
-        <tr ng-repeat="item in newOffloadListItems | filter:{itemDescription: itemFilterText} | orderBy:offLoadItemsSortOrder" ng-hide="readOnly">
+        <tr ng-repeat="item in newOffloadListItems | filter:{itemDescription: itemFilterText}  | orderBy:offLoadItemsSortOrder" ng-hide="readOnly">
           <td>
-            <ui-select required="required" ng-model="item.masterItem" theme="bootstrap" on-select="filterOffloadListItems()" name="newOffloadListItem{{ $index }}">
+            <input type="text" ng-model="item.itemDescription" disabled ng-hide="true"/>
+            <ui-select required="required" ng-model="item.masterItem" theme="bootstrap" on-select="filterOffloadListItems()" name="newOffloadListItem{{ $index }}" ng-change="setItemDescription(item)">
               <ui-select-match placeholder="Select item from list">{{$select.selected.itemCode }} - {{
                 $select.selected.itemName }}
               </ui-select-match>
