--- a/app/views/route-tax-rates.html
+++ b/app/views/route-tax-rates.html
@@ -21,7 +21,7 @@
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="form-group">
                 <label for="tax-rates-type">Tax Type</label>
-                <ui-select ng-model="search.taxType" theme="bootstrap" name="searchTaxType">
+                <ui-select ng-model="search.taxType" theme="bootstrap" name="searchTaxType" id="tax-rates-type">
                   <ui-select-match placeholder="Search by Tax Type">
                     {{ $select.selected.taxTypeCode }}
                   </ui-select-match>
@@ -34,9 +34,9 @@
 
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="form-group">
-                <label for="tax-rates-country">Country</label>
-                <ui-select ng-model="search.country" theme="bootstrap" name="searchCountry" ng-change="filterSearchStationsByCountry(search.country.countryName)">
-                  <ui-select-match placeholder="Search by Country">
+                <label for="tax-rates-departure-country">Departure Country</label>
+                <ui-select ng-model="search.departureCountry" theme="bootstrap" id="tax-rates-departure-country" name="searchDepartureCountry" ng-change="filterSearchDepartureStationsByCountry(search.departureCountry.countryName)">
+                  <ui-select-match placeholder="Search by Departure Country">
                     {{ $select.selected.countryName }}
                   </ui-select-match>
                   <ui-select-choices repeat="country in countriesList | filter: $select.search | orderBy:'countryName'">
@@ -48,10 +48,10 @@
 
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="form-group">
-                <label for="tax-rates-station">Station</label>
-                <ui-select ng-if="uiSelectReady" multiple ng-model="search.stations" theme="bootstrap" sortable="true" close-on-select="false" ng-disabled="!enableSearchStations" style="min-height:35px">
-                  <ui-select-match placeholder="Search by Station">{{ $item.stationCode }} - {{ $item.stationName }}</ui-select-match>
-                  <ui-select-choices group-by="'countryName'" repeat="station in stationsListSearch | filter: $select.search | orderBy:'countryName'">
+                <label for="tax-rates-departure-station">Departure Station</label>
+                <ui-select ng-if="uiSelectReady" multiple ng-model="search.departureStations" id="tax-rates-departure-station" theme="bootstrap" sortable="true" close-on-select="false" ng-disabled="!enableDepartureSearchStations" style="min-height:35px">
+                  <ui-select-match placeholder="Search by Departure Station">{{ $item.stationCode }} - {{ $item.stationName }}</ui-select-match>
+                  <ui-select-choices group-by="'countryName'" repeat="station in departureStationsListSearch | filter: $select.search | orderBy:'countryName'">
                     <div ng-bind-html="station.stationCode + ' - ' + station.stationName | highlight: $select.search"></div>
                   </ui-select-choices>
                 </ui-select>
@@ -61,7 +61,7 @@
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="form-group">
                 <label for="tax-rates-rate-type">Rate Type</label>
-                <ui-select ng-model="search.taxRateType" theme="bootstrap" name="searchRateType">
+                <ui-select ng-model="search.taxRateType" theme="bootstrap" name="searchRateType" id="tax-rates-rate-type">
                   <ui-select-match placeholder="Search by Tax Rate Type">
                     {{ $select.selected.taxRateType }}
                   </ui-select-match>
@@ -74,22 +74,34 @@
 
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="form-group">
-                <label for="tax-rates-rate">Rate</label>
-                <input ng-model="search.taxRate" type="text" name="searchTaxRate" class="form-control" placeholder="Search by Tax Rate">
+                <label for="tax-rates-arrival-country">Arrival Country</label>
+                <ui-select ng-model="search.arrivalCountry" theme="bootstrap" name="searchArrivalCountry" id="tax-rates-arrival-country" ng-change="filterSearchArrivalStationsByCountry(search.arrivalCountry.countryName)">
+                  <ui-select-match placeholder="Search by Arrival Country">
+                    {{ $select.selected.countryName }}
+                  </ui-select-match>
+                  <ui-select-choices repeat="country in countriesList | filter: $select.search | orderBy:'countryName'">
+                    <div ng-bind-html="country.countryName | highlight: $select.search"></div>
+                  </ui-select-choices>
+                </ui-select>
               </div>
             </div>
 
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="form-group">
-                <label for="tax-rates-currency">Currency</label>
-                <ui-select ng-model="search.currency" theme="bootstrap" name="searchCurrency">
-                  <ui-select-match placeholder="Search by Currency">
-                    {{ $select.selected.code + ' - ' + $select.selected.name }}
-                  </ui-select-match>
-                  <ui-select-choices repeat="currency in currenciesList | filter: $select.search | orderBy:'name'">
-                    <div ng-bind-html="currency.code + ' - ' + currency.name | highlight: $select.search"></div>
+                <label for="tax-rates-arrival-station">Arrival Station</label>
+                <ui-select ng-if="uiSelectReady" multiple ng-model="search.arrivalStations" theme="bootstrap" id="tax-rates-arrival-station" sortable="true" close-on-select="false" ng-disabled="!enableArrivalSearchStations" style="min-height:35px">
+                  <ui-select-match placeholder="Search by Station">{{ $item.stationCode }} - {{ $item.stationName }}</ui-select-match>
+                  <ui-select-choices group-by="'countryName'" repeat="station in arrivalStationsListSearch | filter: $select.search | orderBy:'countryName'">
+                    <div ng-bind-html="station.stationCode + ' - ' + station.stationName | highlight: $select.search"></div>
                   </ui-select-choices>
                 </ui-select>
+              </div>
+            </div>
+
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <div class="form-group">
+                <label for="tax-rates-rate">Rate</label>
+                <input ng-model="search.taxRate" type="text" name="searchTaxRate" id="tax-rates-rate" class="form-control" placeholder="Search by Tax Rate">
               </div>
             </div>
 
