--- a/app/views/directives/qr-create.html
+++ b/app/views/directives/qr-create.html
@@ -22,7 +22,7 @@
 
 		<div class="col-xs-12 col-sm-6">
 
-			<input-text label="QR Code" name="qrCodeValue" pattern="regexp.word" placeholder="my qr code" max-width="25"></input-text>
+			<input-text label="QR Code" name="qrCodeValue" pattern="regexp.sentence" placeholder="my qr code" max-width="25"></input-text>
 
 			<alert ng-show="formData.qrCodeImgUrl.length && formData.qrCodeValue.length" type="success">QR code saved!</alert>
 
