--- a/app/views/directives/excel-upload.html
+++ b/app/views/directives/excel-upload.html
@@ -18,8 +18,7 @@
   </ul>
   <div class="drop-box btn" ng-click="$event.preventDefault(); $event.stopPropagation()" ng-if="files">
     <div ng-show="!files">No File Selected</div>
-    <div ng-show="files">{{files[0].name}} <span class="fa fa-remove"
-                                                 ng-click="clearAllFiles(); $event.preventDefault(); $event.stopPropagation()"></span>
+    <div ng-show="files">{{files.name}} <span class="fa fa-remove" ng-click="clearFile(); $event.preventDefault(); $event.stopPropagation()"></span>
     </div>
   </div>
   <button type="button" class="btn btn-info" ng-if="files" ng-click="upload(files)">Upload</button>
