--- a/app/views/route-tax-rates.html
+++ b/app/views/route-tax-rates.html
@@ -380,31 +380,40 @@
   <div class="modal-dialog">
 
     <div class="modal-content">
-
-      <div class="modal-header">
-        <strong class="modal-title">Enter Rate Amounts:</strong>
-      </div>
-
-      <div class="modal-body">
-        <div class="table table-responsive table-hover">
-          <table class="table">
-            <tr ng-repeat="currency in currenciesList">
-              <td>{{ currency.code }}</td>
-              <td><input ng-model="taxRateAmounts[currency.id].amount" type="text" name="amount[{{currency.code}}]" class="form-control"></td>
-            </tr>
-          </table>
+      <form name="taxRateAmountsForm" class="form">
+        <div class="modal-header">
+          <strong class="modal-title">Enter Rate Amounts:</strong>
         </div>
-      </div>
 
-      <div class="modal-footer">
-        <button class="btn btn-default btn-cancel" data-dismiss="modal">
-          <i class="fa fa-close"></i> Cancel
-        </button>
-        <button class="btn btn-success btn-primary" ng-click="confirmation()">
-          <i class="fa fa-check"></i> Done
-        </button>
-      </div>
+        <div class="modal-body">
+          <div ng-if="!taxRateAmountsForm.$valid">
+            <div class="panel panel-danger" id="error-dialog">
+              <div class="panel-heading">Amounts format is not correct.</div>
+            </div>
 
+          </div>
+          <div class="table table-responsive table-hover">
+            <table class="table">
+              <tr ng-repeat="currency in currenciesList">
+                <td>{{ currency.code }}</td>
+                <td>
+                  <input ng-model="taxRateToEditAmounts[currency.id].amount" type="text" name="taxRateAmount[{{currency.code}}]" class="form-control" ng-pattern="regexp.price" placeholder="0.00">
+                </td>
+              </tr>
+            </table>
+          </div>
+        </div>
+
+        <div class="modal-footer">
+          <button class="btn btn-default btn-cancel" data-dismiss="modal">
+            <i class="fa fa-close"></i> Cancel
+          </button>
+          <button class="btn btn-success btn-primary" ng-click="saveRateAmounts()">
+            <i class="fa fa-check"></i> Done
+          </button>
+        </div>
+
+      </form>
     </div>
 
   </div>
