--- a/app/views/route-tax-rates.html
+++ b/app/views/route-tax-rates.html
@@ -48,7 +48,7 @@
 
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="form-group">
-                <label for="tax-rates-departure-station">Departure Station</label>
+                <label for="tax-rates-departure-station">Departure Stations</label>
                 <ui-select ng-if="uiSelectReady" multiple ng-model="search.departureStations" id="tax-rates-departure-station" theme="bootstrap" sortable="true" close-on-select="false" ng-disabled="!enableDepartureSearchStations" style="min-height:35px">
                   <ui-select-match placeholder="Search by Departure Station">{{ $item.stationCode }} - {{ $item.stationName }}</ui-select-match>
                   <ui-select-choices group-by="'countryName'" repeat="station in departureStationsListSearch | filter: $select.search | orderBy:'countryName'">
@@ -88,7 +88,7 @@
 
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="form-group">
-                <label for="tax-rates-arrival-station">Arrival Station</label>
+                <label for="tax-rates-arrival-station">Arrival Stations</label>
                 <ui-select ng-if="uiSelectReady" multiple ng-model="search.arrivalStations" theme="bootstrap" id="tax-rates-arrival-station" sortable="true" close-on-select="false" ng-disabled="!enableArrivalSearchStations" style="min-height:35px">
                   <ui-select-match placeholder="Search by Station">{{ $item.stationCode }} - {{ $item.stationName }}</ui-select-match>
                   <ui-select-choices group-by="'countryName'" repeat="station in arrivalStationsListSearch | filter: $select.search | orderBy:'countryName'">
@@ -140,10 +140,10 @@
       <thead>
       <tr>
         <th>Tax Type *</th>
-        <th>Departure Country *</th>
-        <th>Departure Station *</th>
-        <th>Arrival Country *</th>
-        <th>Arrival Station *</th>
+        <th>Departure <br />Country *</th>
+        <th>Departure <br />Station *</th>
+        <th>Arrival <br />Country *</th>
+        <th>Arrival <br />Station *</th>
         <th>Rate Type *</th>
         <th>Rate *</th>
         <th>Effective From *</th>
@@ -306,7 +306,7 @@
         </td>
         <td class="animate-switch tax-rates-input col-xs-1" ng-switch-when="create">
           <div ng-show="isTaxRateTypePercentage(taxRate)">
-            <input ng-model="taxRate.taxRateValue" type="text" name="taxRateValue" class="form-control" placeholder="Tax Rate" ng-disabled="isDisabled(taxRate)">
+            <input ng-model="taxRate.taxRateValue" type="text" name="taxRateValue" class="form-control" placeholder="Tax Rate">
           </div>
           <div ng-show="isTaxRateTypeAmount(taxRate)">
             <a class="btn btn-info" ng-click="showCompanyTaxAmountModal(taxRate)">
