--- a/app/views/route-tax-rates.html
+++ b/app/views/route-tax-rates.html
@@ -156,8 +156,9 @@
       <!-- Switch ON taxRate.action - Table row -->
       <tr tabindex="0" class="animate-switch-container" ng-repeat="taxRate in companyTaxRatesList | orderBy: 'created' track by $index" ng-switch on="taxRate.action" ng-class="taxRateRowClass(taxRate)">
         <!-- Switch for taxTypeCode -->
-        <td class="animate-switch col-xs-1" ng-switch-when="read">{{ taxRate.taxTypeCode.taxTypeCode }}</td>
-        <td class="animate-switch tax-rates-ui-select col-xs-1" ng-switch-when="edit">
+        <td class="animate-switch" ng-switch-when="read">{{ taxRate.taxTypeCode.taxTypeCode }}</td>
+        <td class="animate-switch tax-rates-ui-select" ng-switch-when="edit">
+          <div style="height:20px"></div>
           <ui-select ng-model="taxRate.taxTypeCode" theme="bootstrap" name="taxTypeCode" ng-disabled="isDisabled(taxRate)">
             <ui-select-match placeholder="Tax Type">
               {{ $select.selected.taxTypeCode }}
@@ -167,7 +168,7 @@
             </ui-select-choices>
           </ui-select>
         </td>
-        <td class="animate-switch tax-rates-ui-select col-xs-1" ng-switch-when="create">
+        <td class="animate-switch tax-rates-ui-select" ng-switch-when="create">
           <ui-select ng-model="taxRate.taxTypeCode" theme="bootstrap" name="taxTypeCode">
             <ui-select-match placeholder="Tax Type">
               {{ $select.selected.taxTypeCode }}
@@ -178,8 +179,9 @@
           </ui-select>
         </td>
         <!-- Switch for departure countryName -->
-        <td class="animate-switch col-xs-1" ng-switch-when="read">{{ taxRate.departureStationsCountryName.countryName }}</td>
-        <td class="animate-switch tax-rates-ui-select col-xs-1" ng-switch-when="edit">
+        <td class="animate-switch" ng-switch-when="read">{{ taxRate.departureStationsCountryName.countryName }}</td>
+        <td class="animate-switch tax-rates-ui-select" ng-switch-when="edit">
+          <div style="height:20px"></div>
           <ui-select ng-model="taxRate.departureStationsCountryName" theme="bootstrap" name="taxRateCountry" ng-disabled="isTaxRateDepartureCountryFieldDisabled(taxRate)" ng-change="filterDepartureTaxRateStations(taxRate)">
             <ui-select-match placeholder="Country">
               {{ $select.selected.countryName }}
@@ -189,7 +191,7 @@
             </ui-select-choices>
           </ui-select>
         </td>
-        <td class="animate-switch tax-rates-ui-select col-xs-1" ng-switch-when="create">
+        <td class="animate-switch tax-rates-ui-select" ng-switch-when="create">
           <ui-select ng-model="taxRate.departureStationsCountryName" theme="bootstrap" name="taxRateCountry" ng-disabled="isTaxRateDepartureCountryFieldDisabledForCreate(taxRate)" ng-change="filterDepartureTaxRateStations(taxRate)">
             <ui-select-match placeholder="Country">
               {{ $select.selected.countryName }}
@@ -206,12 +208,13 @@
           </p>
         </td>
         <td class="animate-switch tax-rates-multi-select col-xs-1" ng-switch-when="edit">
-          <ui-select ng-if="taxRateSelectReady(taxRate)"  on-select="onUiSelect($select)"  multiple ng-model="taxRate.departureStations" theme="bootstrap" sortable="true" close-on-select="false" ng-disabled="isTaxRateDepartureStationsDisabled(taxRate)" style="margin-bottom:10px; min-height:35px;">
-            <ui-select-match placeholder="Stations">{{ $item.stationCode }}</ui-select-match>
-            <ui-select-choices group-by="'countryName'" repeat="station in taxRate.availableDepartureStations | filter: $select.search | orderBy:'stationCode'" position={{taxRate.position}}>
-              <div ng-bind-html="station.stationCode + ' - ' + station.stationName | highlight: $select.search"></div>
-            </ui-select-choices>
-          </ui-select>
+            <div style="height:20px"><input ng-model="formData.isPrintReceipt" type="checkbox"/> All</div>
+            <ui-select ng-if="taxRateSelectReady(taxRate)"  on-select="onUiSelect($select)"  multiple ng-model="taxRate.departureStations" theme="bootstrap" sortable="true" close-on-select="false" ng-disabled="isTaxRateDepartureStationsDisabled(taxRate)" style="margin-bottom:10px; min-height:35px;">
+              <ui-select-match placeholder="Stations">{{ $item.stationCode }}</ui-select-match>
+              <ui-select-choices group-by="'countryName'" repeat="station in taxRate.availableDepartureStations | filter: $select.search | orderBy:'stationCode'" position={{taxRate.position}}>
+                <div ng-bind-html="station.stationCode + ' - ' + station.stationName | highlight: $select.search"></div>
+              </ui-select-choices>
+            </ui-select>
         </td>
         <td class="animate-switch tax-rates-multi-select col-xs-1" ng-switch-when="create">
           <ui-select ng-if="viewIsReady"  on-select="onUiSelect($select)"  multiple ng-model="taxRate.departureStations" theme="bootstrap" sortable="true" close-on-select="false" ng-disabled="isTaxRateDepartureStationsDisabledForCreate(taxRate)" style="margin-bottom:10px; min-height:35px;">
@@ -222,8 +225,9 @@
           </ui-select>
         </td>
         <!-- Switch for arrival countryName -->
-        <td class="animate-switch col-xs-1" ng-switch-when="read">{{ taxRate.arrivalStationsCountryName.countryName }}</td>
-        <td class="animate-switch tax-rates-ui-select col-xs-1" ng-switch-when="edit">
+        <td class="animate-switch" ng-switch-when="read">{{ taxRate.arrivalStationsCountryName.countryName }}</td>
+        <td class="animate-switch tax-rates-ui-select" ng-switch-when="edit">
+          <div style="height:20px"></div>
           <ui-select ng-model="taxRate.arrivalStationsCountryName" theme="bootstrap" name="taxRateCountry" ng-disabled="isTaxRateArrivalCountryFieldDisabled(taxRate)" ng-change="filterArrivalTaxRateStations(taxRate)">
             <ui-select-match placeholder="Country">
               {{ $select.selected.countryName }}
@@ -233,7 +237,7 @@
             </ui-select-choices>
           </ui-select>
         </td>
-        <td class="animate-switch tax-rates-ui-select col-xs-1" ng-switch-when="create">
+        <td class="animate-switch tax-rates-ui-select" ng-switch-when="create">
           <ui-select ng-model="taxRate.arrivalStationsCountryName" theme="bootstrap" name="taxRateCountry" ng-disabled="isTaxRateArrivalCountryFieldDisabledForCreate(taxRate)" ng-change="filterArrivalTaxRateStations(taxRate)">
             <ui-select-match placeholder="Country">
               {{ $select.selected.countryName }}
@@ -250,6 +254,7 @@
           </p>
         </td>
         <td class="animate-switch tax-rates-multi-select col-xs-1" ng-switch-when="edit">
+          <div style="height:20px"><input ng-model="formData.isPrintReceipt" type="checkbox"/> All</div>
           <ui-select ng-if="taxRateSelectReady(taxRate)"  on-select="onUiSelect($select)"  multiple ng-model="taxRate.arrivalStations" theme="bootstrap" sortable="true" close-on-select="false" ng-disabled="isTaxRateArrivalStationsDisabled(taxRate)" style="margin-bottom:10px; min-height:35px;">
             <ui-select-match placeholder="Stations">{{ $item.stationCode }}</ui-select-match>
             <ui-select-choices group-by="'countryName'" repeat="station in taxRate.availableArrivalStations | filter: $select.search | orderBy:'stationCode'" position={{taxRate.position}}>
@@ -266,8 +271,9 @@
           </ui-select>
         </td>
         <!-- Switch for taxRateType -->
-        <td class="animate-switch col-xs-1" ng-switch-when="read">{{ taxRate.taxRateType.taxRateType }}</td>
-        <td class="animate-switch tax-rates-ui-select col-xs-1" ng-switch-when="edit">
+        <td class="animate-switch" ng-switch-when="read">{{ taxRate.taxRateType.taxRateType }}</td>
+        <td class="animate-switch tax-rates-ui-select" ng-switch-when="edit">
+          <div style="height:20px"></div>
           <ui-select ng-model="taxRate.taxRateType" theme="bootstrap" name="taxRateType" ng-disabled="isDisabled(taxRate)" ng-change="shouldTaxRateCurrencyBeClear(taxRate)">
             <ui-select-match placeholder="Rate Type">
               {{ $select.selected.taxRateType }}
@@ -277,7 +283,7 @@
             </ui-select-choices>
           </ui-select>
         </td>
-        <td class="animate-switch tax-rates-ui-select col-xs-1" ng-switch-when="create">
+        <td class="animate-switch tax-rates-ui-select" ng-switch-when="create">
           <ui-select ng-model="taxRate.taxRateType" theme="bootstrap" name="taxRateType" ng-change="shouldTaxRateCurrencyBeClear(taxRate)">
             <ui-select-match placeholder="Rate Type">
               {{ $select.selected.taxRateType }}
@@ -288,13 +294,14 @@
           </ui-select>
         </td>
         <!-- Switch for rate -->
-        <td class="animate-switch col-xs-1" ng-switch-when="read">
+        <td class="animate-switch" ng-switch-when="read">
           <div ng-show="isTaxRateTypePercentage(taxRate)">{{ taxRate.taxRateValue }}  %</div>
           <div ng-show="isTaxRateTypeAmount(taxRate)">
             <div ng-repeat="currency in taxRate.taxRateAmounts">{{ findCompanyCurrencyCode(currency.companyCurrencyId) }} {{ currency.amount }}</div>
           </div>
         </td>
-        <td class="animate-switch tax-rates-input col-xs-1" ng-switch-when="edit">
+        <td class="animate-switch tax-rates-input" ng-switch-when="edit">
+          <div style="height:20px"></div>
           <div ng-show="isTaxRateTypePercentage(taxRate)">
             <input ng-model="taxRate.taxRateValue" type="text" name="taxRateValue" class="form-control" placeholder="Tax Rate" ng-disabled="isDisabled(taxRate)">
           </div>
@@ -304,7 +311,7 @@
             </a>
           </div>
         </td>
-        <td class="animate-switch tax-rates-input col-xs-1" ng-switch-when="create">
+        <td class="animate-switch tax-rates-input" ng-switch-when="create">
           <div ng-show="isTaxRateTypePercentage(taxRate)">
             <input ng-model="taxRate.taxRateValue" type="text" name="taxRateValue" class="form-control" placeholder="Tax Rate">
           </div>
@@ -315,16 +322,18 @@
           </div>
         </td>
         <!-- Switch for startDate -->
-        <td class="animate-switch col-xs-1" ng-switch-when="read">{{ taxRate.startDate }}</td>
-        <td class="animate-switch tax-rates-dates col-xs-1" ng-switch-when="edit">
+        <td class="animate-switch" ng-switch-when="read">{{ taxRate.startDate }}</td>
+        <td class="animate-switch tax-rates-dates" ng-switch-when="edit">
+          <div style="height:20px"></div>
           <date-picker-field disable-past="true" ng-model="taxRate.startDate" disable="isDisabled(taxRate)" min-date="determineMinDate(taxRate.startDate)" orientation="determineDatePickerOrientation(taxRate)"></date-picker-field>
         </td>
-        <td class="animate-switch tax-rates-dates col-xs-1" ng-switch-when="create">
+        <td class="animate-switch tax-rates-dates" ng-switch-when="create">
           <date-picker-field disable-past="true" ng-model="taxRate.startDate" min-date="determineMinDate()"></date-picker-field>
         </td>
         <!-- Switch for endDate -->
-        <td class="animate-switch col-xs-1" style="position:relative !important" ng-switch-when="read">{{ taxRate.endDate }}</td>
-        <td class="animate-switch tax-rates-dates col-xs-1" style="position:relative !important" ng-switch-when="edit" >
+        <td class="animate-switch" style="position:relative !important" ng-switch-when="read">{{ taxRate.endDate }}</td>
+        <td class="animate-switch tax-rates-dates" style="position:relative !important" ng-switch-when="edit" >
+          <div style="height:20px"></div>
           <date-picker-field
             min-date="minDate"
             custom-effective="true"
@@ -333,7 +342,7 @@
             ng-model="taxRate.endDate"
             orientation="determineDatePickerOrientation(taxRate)" ></date-picker-field>
         </td>
-        <td class="animate-switch tax-rates-dates col-xs-1" style="position:relative !important" ng-switch-when="create">
+        <td class="animate-switch tax-rates-dates" style="position:relative !important" ng-switch-when="create">
           <date-picker-field
             min-date="minDate"
             custom-effective="true"
@@ -341,13 +350,13 @@
             ng-model="taxRate.endDate"></date-picker-field>
         </td>
         <td ng-switch-when="read">{{ getUpdatedOn(taxRate) }}</td>
-        <td ng-switch-when="edit" style="padding-top:15px;">{{ getUpdatedOn(taxRate) }}</td>
+        <td ng-switch-when="edit" style="padding-top:15px;"><div style="height:20px"></div>{{ getUpdatedOn(taxRate) }}</td>
         <td ng-switch-when="create">{{ getUpdatedOn(taxRate) }}</td>
         <td ng-switch-when="read">{{ getUpdateBy(taxRate) }}</td>
-        <td ng-switch-when="edit" style="padding-top:15px;">{{ getUpdateBy(taxRate) }}</td>
+        <td ng-switch-when="edit" style="padding-top:15px;"><div style="height:20px"></div>{{ getUpdateBy(taxRate) }}</td>
         <td ng-switch-when="create">{{ getUpdateBy(taxRate) }}</td>
         <!-- Buttons for Read -->
-        <td class="animate-switch col-xs-1" ng-switch-when="read" ng-show="isCRUD">
+        <td class="animate-switch" ng-switch-when="read" ng-show="isCRUD">
           <a class="btn btn-primary btn-xs" ng-show="isTaxRateEditable(taxRate)" ng-click="editCompanyTaxRate(taxRate)">
             <span class="fa fa-pencil"></span>
           </a>
@@ -356,7 +365,8 @@
           </a>
         </td>
         <!-- Buttons for Edit -->
-        <td class="animate-switch tax-rates-action col-xs-1" ng-switch-when="edit" ng-show="isCRUD">
+        <td class="animate-switch tax-rates-action" ng-switch-when="edit" ng-show="isCRUD">
+          <div style="height:20px"></div>
           <a tabindex="0" class="btn btn-primary btn-xs" ng-click="saveTaxRateEdits(taxRate)">
             <span class="fa fa-save"></span>
           </a>
@@ -365,7 +375,7 @@
           </a>
         </td>
         <!-- Buttons for Create -->
-        <td class="animate-switch tax-rates-action col-xs-1" ng-switch-when="create" ng-show="isCRUD">
+        <td class="animate-switch tax-rates-action" ng-switch-when="create" ng-show="isCRUD">
           <a class="btn btn-primary btn-xs" ng-click="createNewTaxRatePayload(taxRate)">
             <span class="fa fa-save"></span>
           </a>
